--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
   import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
   // ========= CONFIGURA ESTO =========
-  const SUPABASE_URL = "PEGA_AQUI_TU_SUPABASE_URL";
-  const SUPABASE_ANON_KEY = "PEGA_AQUI_TU_SUPABASE_ANON_KEY";
+  const SUPABASE_URL = "https://ibetbsxasxxakjdlaocp.supabase.co";
+  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImliZXRic3hhc3h4YWtqZGxhb2NwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA2NzIyMzYsImV4cCI6MjA4NjI0ODIzNn0.U4LyGRebUDWqXlEt8zEEde9UILXzWfFjzbghqPhBnQg";
   // =================================
 
   const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
